--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,6 @@ runtime: python310
 env_variables:
   FLASK_ENV: production
   SECRET_KEY: "sua_chave_secreta_aqui"
-  # Se você estiver usando um banco de dados gerenciado em produção, coloque a variável DATABASE_URL aqui.
+  DATABASE_URL: "mysql+pymysql://db-adgest1:Sporting789@/adgest_db?unix_socket=/cloudsql/adgest:us-central1:db-adgest1"
 
 entrypoint: gunicorn -b :$PORT run:app
