erro de correr versão anterior

--- a/app.yaml
+++ b/app.yaml
@@ -4,5 +4,6 @@ env_variables:
   FLASK_ENV: production
   SECRET_KEY: "sua_chave_secreta_aqui"
   DATABASE_URL: "mysql+pymysql://db-adgest1:Sporting789@/adgest_db?unix_socket=/cloudsql/adgest:us-central1:db-adgest1"
+  DEPLOY_TIMESTAMP: "2025-04-13T18:50:00"  # Atualize esse valor a cada novo deploy
 
 entrypoint: gunicorn -b :$PORT run:app
