--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,16 @@
-runtime: python39
+runtime: python
 env: flex
 
+# configura o Cloud SQL Proxy
 beta_settings:
   cloud_sql_instances: adgest:europe-west1:db-adgest2
 
+# variáveis de ambiente
 env_variables:
   FLASK_ENV: production
   SECRET_KEY: "sua_chave_secreta_aqui"
   DATABASE_URL: "mysql+pymysql://db_adgest2:Sporting789%3F@/adgest_db?unix_socket=/cloudsql/adgest:europe-west1:db-adgest2"
   DEPLOY_TIMESTAMP: "2025-04-18T12:00:00"
 
+# como iniciar seu app
 entrypoint: gunicorn -b :$PORT run:app
